[package]
name = "dac"
description = "A tool to manage Discord settings as a config"
version = "0.2.2"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/vigenere23/dac"
repository = "https://github.com/vigenere23/dac"
readme = "README.md"
keywords = ["discord", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
clap = { version = "3.2.17", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
serde_yaml = "0.9.9"
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
