[package]
name = "dac"
authors = ["Gab St-Pierre <lolgab1@hotmail.com>"]
description = "Manage Discord server settings with a repeatable, versionable config file"
version = "0.2.2"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/vigenere23/dac"
repository = "https://github.com/vigenere23/dac"
readme = "README.md"
keywords = ["discord", "cli", "config"]
categories = ["command-line-utilities", "config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-trait = "0.1.57"
clap = { version = "3.2.17", features = ["derive"] }
handlebars = "4.3.3"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
serde_yaml = "0.9.9"
strum = { version = "0.24.1", features = ["derive"] }
yaml-merge-keys = { version = "0.5.1" }
yaml-rust = "0.4.5"
# tokio = { version = "1.20.1", features = ["full"] }
