[package]
name = "disma-cli"
authors = ["Gab St-Pierre <lolgab1@hotmail.com>"]
description = "Discord server management has never been easier!"
version = "0.8.3"
edition = "2021"
license-file = "../LICENSE"
homepage = "https://github.com/vigenere23/disma"
repository = "https://github.com/vigenere23/disma"
readme = "README.md"
keywords = ["discord", "cli", "config"]
categories = ["command-line-utilities", "config"]

[[bin]]
name = "disma"
path = "src/main.rs"

[dependencies]
disma = { path = "../disma", version = "0.11.2" }
clap = { version = "3.2.17", features = ["derive"] }
handlebars = "4.3.3"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
serde_yaml = "0.9.9"
yaml-merge-keys = { version = "0.5.1" }
yaml-rust = "0.4.5"
colored = "2.0.0"
