[package]
name = "disma"
authors = ["Gab St-Pierre <lolgab1@hotmail.com>"]
description = "Discord server management has never been easier!"
version = "0.6.0"
edition = "2021"
license-file = "../LICENSE"
homepage = "https://github.com/vigenere23/disma"
repository = "https://github.com/vigenere23/disma"
readme = "README.md"
keywords = ["discord", "cli", "config"]
categories = ["command-line-utilities", "config"]

[dependencies]
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
strum = { version = "0.24.1", features = ["derive"] }
