[package]
name = "disma"
authors = ["Gab St-Pierre <lolgab1@hotmail.com>"]
description = "Discord server management has never been easier!"
version = "0.13.0"
edition = "2021"
license-file = "../LICENSE"
homepage = "https://github.com/vigenere23/disma"
repository = "https://github.com/vigenere23/disma"
readme = "README.md"
keywords = ["discord", "cli", "config"]
categories = ["command-line-utilities", "config"]

[dependencies]
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
serde_repr = "0.1.9"
strum = { version = "0.24.1", features = ["derive"] }

[dev-dependencies]
mock-it = "0.9.0"
serde_yaml = "0.9.16"
